# redirect-engine

./: .gitignore  ApiHandler.cpp  ApiHandler.h  CMakeLists.txt  Readme.md  RedirectHandler.cpp  RedirectHandler.h  create_or_update_domain.sh  create_tinyurl.sh  delete_domain.sh  delete_redirect.sh  deleteall.sql  main.cpp  prepare_database.sql  test.uuid.sh  update_redirect.sh
bootstrap.scripts/: stage.0.sh  stage.1.sh  stage.2.sh  stage.3.sh  stage.4.sh
db.scripts/: db.delete.sql  db.drop.sql  db.init.sql  db.upgrade.1.sql  db.upgrade.2.sql
db_scripts/: alter_database.sql
doc/: API.docx  ~$API.docx
lib/: PBULKBackendClicks.h  RWLock.h  RedirectInfo.h  RedirectProcessor.h  Reporting.h  RowsStorage.h
test.scripts/: test.agent.sh  test.country.sh  test.referrer.sh  test.uuid.sh
utils/cpppgconnect/: CMakeLists.txt  main.cpp
utils/fillwithmockdata/: Program.cs  fillwithmockdata.csproj  fillwithmockdata.sln
